# gwucs6555

./: CMakeLists.txt  README  README.md
examples/: CMakeLists.txt  biplane.d  lab0.cpp  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  mesh_end_ascii.ply  mesh_start_ascii.ply  template.cpp
include/cs6555/: AABB.h  Actor.h  ArticulatedBody.h  BVH.h  Body.h  Boid.h  BoundingSphere.h  BoundingVolume.h  CMakeLists.txt  Camera.h  CloudMaker.h  Color.h  Constants.h  ContactEvent.h  ControlPoint.h  DeformableBody.h  DeformableGeometry.h  Edge.h  Event.h  Flock.h  Geometry.h  GeometryMaker.h  Interpolation.h  Joint.h  Keyframe.h  Link.h  Material.h  Math.h  Mesh.h  MeshLoader.h  Motivator.h  Movie.h  Node.h  OBB.h  Particle.h  ParticleCloud.h  ParticleEmitter.h  ParticleField.h  ParticleSoup.h  Patch.h  (+20 more)
include/cs6555/Math/: CubicSpline.h  EulerAngle.h  LineSegment.h  Matrix3.h  Matrix4.h  MatrixN.h  Quaternion.h  Vector3.h  Vector4.h
src/: AABB.cpp  Actor.cpp  ArticulatedBody.cpp  BVH.cpp  Boid.cpp  BoundingSphere.cpp  BoundingVolume.cpp  CMakeLists.txt  Camera.cpp  CloudMaker.cpp  DeformableBody.cpp  Flock.cpp  Geometry.cpp  GeometryMaker.cpp  Joint.cpp  Keyframe.cpp  Link.cpp  Mesh.cpp  MeshLoader.cpp  OBB.cpp  Particle.cpp  Patch.cpp  Physics.cpp  PointCloud.cpp  Polygon.cpp  Pose.cpp  Renderer.cpp  RigidBody.cpp  Scene.cpp  Trajectory.cpp  Trigon.cpp  Vertex.cpp  Viewport.cpp
src/Math/: CubicSpline.cpp  EulerAngle.cpp  Matrix3.cpp  Matrix4.cpp  MatrixN.cpp  Quaternion.cpp  Vector3.cpp  Vector4.cpp
testing/: CMakeLists.txt  biped.cpp  boids.cpp  boids_simple.cpp  camera.cpp  cubicspline.cpp  cycliccircle.cpp  deformablebody.cpp  deformablespace.cpp  eigen.cpp  explosion.cpp  hip.cpp  humanoid.cpp  loadply.cpp  matrix3.cpp  matrix4.cpp  particle.cpp  patch.cpp  pendulum.cpp  physics.cpp  pointcloud.cpp  pose.cpp  quaternion.cpp  renderer.cpp  shapes.cpp  simpleglut.cpp  speed.cpp  springmasssystem.cpp  tangent.cpp  trajectory.cpp  vbo.cpp  vector3.cpp  vector4.cpp
